<resources>
    <string name="app_name">GreenFlow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GreenFlow</string>
    <string name="nav_header_subtitle">greenflowgroup@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cài đặt</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_location">Vị trí thùng rác</string>
    <string name="menu_trash_bins">Quản lý thùng rác</string>
    <string name="menu_notifications">Thông báo</string>
    <string name="menu_route">Lộ trình thu gom</string>
    <string name="menu_about">Giới thiệu</string>
    <string name="menu_settings">Cài đặt</string>
</resources>