<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.appgreenflowgroup.ui.user.UserFragment"
        android:label="Thông tin nhân viên"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appgreenflowgroup.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.example.appgreenflowgroup.ui.location.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_trash_bins" />

    <fragment
        android:id="@+id/nav_trash_bins"
        android:name="com.example.appgreenflowgroup.ui.trash_bins.TrashBinsFragment"
        android:label="@string/menu_trash_bins"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/nav_route"
        android:name="com.example.appgreenflowgroup.ui.route.RouteFragment"
        android:label="@string/menu_route"
        tools:layout="@layout/fragment_route" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.appgreenflowgroup.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.appgreenflowgroup.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.appgreenflowgroup.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>